--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: MyFirstGitHubPage
-author: M-Galassi
-description: this is an example page
+title: Portfolio
+author: Michaël Galassi
+description: This is my first generated GitHub page
